Added multi-currency support (account creation/deposit/withdraw)